--- a/client/client/src/components/Task.css
+++ b/client/client/src/components/Task.css
@@ -27,7 +27,7 @@
     margin-top: 10px;
 }
 .task-edit-btn, .task-delete-btn {
-    padding: 5px 10px;
+    /* padding: 5px 10px; */
     font-size: 0.8rem;
     color: #fff;
     border: none;
