--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -506,8 +506,8 @@
 
 /*  */
 .progress-controls {
-    display: flex;
-    gap: 10px;
+    /* display: flex;
+    gap: 5px; */
 }
 .search-input {
     padding: 5px;
@@ -518,7 +518,7 @@
     background-color: #3681cc;
     color: white;
     border: none;
-    padding: 5px 10px;
+    padding: 5px 40px;
     border-radius: 5px;
     cursor: pointer;
     transition: ease 200ms;
